# audio-classification-playground

./: .gitignore  README.md  pyproject.toml
audio_classification_playground/acoustic_events/: PRODUCER_CONTRACT.md  __init__.py
audio_classification_playground/acoustic_events/composition/: README.md  __init__.py  __main__.py  cli.py  composer.py  jsonutil.py  package.py
audio_classification_playground/acoustic_events/inference/: README.md  __init__.py  __main__.py  adapters.py  artifacts.py  audio.py  cli.py  log.py  (+1 more)
audio_classification_playground/affective_events/: METHODOLOGY.md  __init__.py  baseline.py  config.py  detectors.py  fusion.py  pipeline.py  preprocessing.py  schema.py  scoring.py  types.py  validation.py
audio_classification_playground/panns/: build_category_mapping.py  category_mapping.json  config.py  inference.py  models.py  visualize.py
audio_classification_playground/synthetic/: __init__.py  audio_loader.py  audio_mixer.py  create_test_samples.py  download_samples.py  generator.py  label_generator.py  test_synthetic.py  timeline_generator.py  visualize_synthetic.py
manifests/: experiment.yaml  experiments-examples.yaml  interactive-work.yaml
notebooks/: BEATs.ipynb  audio_gen.ipynb  download_speech.ipynb  emotion2vec.ipynb  explore_signals.ipynb  pann_analysis.ipynb  voc2vec.ipynb  vox-profile-emotion-cat.ipynb  vox-profile-emotion-dim-workcopy.ipynb  vox-profile-emotion-dim.ipynb  vox-profile-fluency.ipynb
tests/: test_acoustic_events_simple.py  test_affective_events_simple.py
tests/acoustic_events/: test_composition_package.py  test_detector.py  test_disfluency_producer.py  test_emotion_producer.py  test_fusion.py  test_inference_artifacts.py  test_pipeline.py  test_preprocessing_baseline.py  test_review_generic.py
tests/affective_events/: test_detector.py  test_fusion.py  test_pipeline.py  test_preprocessing_baseline.py  test_review_generic.py
(+55 files in other folders)
