[project]
name = "audio-classification-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=0.36.1",
    "ipython>=8.18.1",
    "jupyterlab>=4.5.3",
    "librosa>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.13.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.9.1",
    "transformers>=4.57.6",
]

[tool.setuptools]
packages = ["audio_classification_playground"]

[tool.setuptools.package-data]
audio_classification_playground = ["**/*.csv"]
