[project]
name = "audio-classification-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "addict>=2.4.0",
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "flair>=0.15.1",
    "funasr>=1.3.1",
    "huggingface-hub>=0.36.1",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.3",
    "k2>=0.3.0",
    "librosa>=0.11.0",
    "loralib>=0.1.2",
    "matplotlib>=3.9.4",
    "modelscope>=1.35.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "ruptures>=1.1.10",
    "scipy>=1.13.1",
    "simplejson>=3.20.2",
    "sortedcontainers>=2.4.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "speechbrain>=1.1.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchcodec>=0.9.1",
    "transformers>=4.57.6",
]

[tool.hatch.build.targets.wheel]
packages = ["audio_classification_playground"]
include = ["audio_classification_playground/**/*.csv"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
